..F....... [ZBXNEXT-6294] fixed textarea overflow popup

--- a/sass/stylesheets/sass/screen.scss
+++ b/sass/stylesheets/sass/screen.scss
@@ -7462,8 +7462,12 @@ z-select,
 		background: $header-bg-color;
 		z-index: 3;
 	}
-}
 
+	.textarea-flexible {
+		max-height: 200px;
+		overflow-y: auto;
+	}
+}
 
 .global-macro-table,
 .inherited-macros-table,
