--- a/ui/assets/styles/blue-theme.css
+++ b/ui/assets/styles/blue-theme.css
@@ -5980,6 +5980,10 @@ z-select.z-select-host-interface li[disabled] .description:not(:empty),
   top: 0;
   background: #ffffff;
   z-index: 3; }
+.modal-popup-static .textarea-flexible,
+.modal-popup-preprocessing .textarea-flexible {
+  max-height: 200px;
+  overflow-y: auto; }
 
 .global-macro-table .table-col-value,
 .global-macro-table .table-col-template-value,
